--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -66,6 +66,8 @@
     }
   }
   &-container {
+    width: 100%;
+    position: absolute;
     display: grid;
     grid-template-columns: 50px auto 50px;
   }
